Додавання форми підписки у футер

--- a/portfolio.html
+++ b/portfolio.html
@@ -297,6 +297,17 @@
             </li>
           </ul>
         </div>
+        <form class="subscription">
+          <h2>Подпишитесь на рассылку</h2>
+          <label>
+            <input class="subscription-input" type="mail" name="E-mail" placeholder="E-mail" required>
+          </label>
+          <button class="order subscription-button" type="submit">Подписаться
+            <svg class="icon-send" height="24" width="24">
+            <use href="./images/icons.svg#icon-send"></use> 
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
